--- a/styles/style.css
+++ b/styles/style.css
@@ -40,13 +40,12 @@ ol {
 
 .visually-hidden {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-  clip: rect(0 0 0 0);
+  inline-size: 1px;
+  block-size: 1px;
   overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
 } 
 
 .button {
@@ -85,8 +84,9 @@ ol {
 }
 
 
-/* ------ УБРАТЬ -------*/
+/* ------ ПЕРЕМЕСТИТЬ -------*/
 .content__list {
+  position: relative;
   width: 400px;
   height: 300px;
   overflow: scroll;
@@ -98,6 +98,10 @@ ol {
   inline-size: 100%;
   margin-block-end: 16px;
   margin-block-start: 78px;
+}
+
+.result__video-container {
+  position: relative;
 }
 
 .search-form {
@@ -129,6 +133,7 @@ ol {
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
+  color: rgb(255 255 255 / .7);
 }
 
 .search-form__textfield:hover {
