--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ ol {
 .content {
   display: flex;
   flex-direction: row;
-  max-block-size: 539px;
+  min-block-size: 539px;
   margin: auto;
   padding-inline: 30px;
   gap: 30px;
@@ -87,10 +87,12 @@ ol {
   display: flex;
   flex-direction: column;
   justify-content: end;
+  max-inline-size: 711px;
 }
 
 .result__video-container {
   position: relative;
+  margin-block-start: auto;
   margin-block-end: 16px;
 }
 
@@ -115,10 +117,6 @@ ol {
   margin-block-end: 5px;
 }
 
-/* .search-form__label {
-
-} */
-
 .search-form__textfield {
   inline-size: 100%;
   background-color: transparent;
@@ -138,7 +136,6 @@ ol {
 
 .search-form__textfield:active {
   border: 1px solid #fff;
-  border-radius: 0;
 }
 
 .search-form__textfield:focus {
@@ -196,7 +193,7 @@ ol {
 }
 
 .content__details {
-  max-inline-size: 400px;
+  min-inline-size: 400px;
 }
 
 .title {
@@ -216,8 +213,10 @@ ol {
 
 .content__list {
   position: relative;
-  max-block-size: 300px;
-  overflow: hidden;
+  block-size: 300px;
+  max-inline-size: 400px;
+  overflow-y: auto;
+  padding-block-end: 1px;
 }
 
 .content__list-item:not(:last-child) {
@@ -252,10 +251,6 @@ ol {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
-
-/* .content__video-card-description-container {
-
-} */
 
 .content__video-card-title {
   font-family: Oswald, sans-serif;
