--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,8 @@ ol {
   position: relative;
   margin-block-start: auto;
   margin-block-end: 16px;
+  inline-size: 100%;
+  min-block-size: 400px;
 }
 
 .result__video {
@@ -147,6 +149,10 @@ ol {
   outline: none;
 }
 
+.search-form__textfield:focus-visible {
+  outline: none;
+}
+
 .search-form__textfield:active {
   border: 1px solid #fff;
 }
@@ -170,7 +176,7 @@ ol {
   cursor: pointer;
 }
 
-.search-form__label:has(.search-form__checkbox:focus) {
+.search-form__label:has(:focus-visible) {
   outline: 1px solid #fff;
   outline-offset: 1px;
 }
@@ -224,7 +230,6 @@ ol {
   block-size: 300px;
   max-inline-size: 400px;
   overflow-y: auto;
-  padding: 2px;
 }
 
 .content__list-item:not(:last-child) {
@@ -283,4 +288,9 @@ ol {
 
 .more-button {
   inline-size: 100%;
+}
+
+.more-button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -3px;
 }
