--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,7 @@ ol {
   margin-block-start: auto;
   margin-block-end: 16px;
   inline-size: 100%;
-  min-block-size: 400px;
+  max-block-size: 395px;
 }
 
 .result__video {
@@ -119,13 +119,21 @@ ol {
   margin-block-end: 5px;
 }
 
-.search-form__label:focus {
-  outline: none;
+.search-form__label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+  padding: 1px;
 }
 
-.search-form__label:has(:focus-visible) {
+.search-form__label:focus-visible {
   outline: 1px solid #fff;
-  outline-offset: 1px;
+  outline-offset: 2px;
+}
+
+.search-form__label:hover:has(input[type="checkbox"]) {
+  cursor: pointer;
 }
 
 .search-form__textfield {
@@ -138,7 +146,7 @@ ol {
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
-  color: rgb(255 255 255 / 0.7);
+  color: #fff;
 }
 
 .search-form__textfield:hover {
@@ -154,31 +162,13 @@ ol {
 }
 
 .search-form__textfield:active {
-  border: 1px solid #fff;
+  outline: 1px solid #fff;
 }
 
 .search-form__checkbox-list {
   display: flex;
   flex-direction: row;
   gap: 15px;
-}
-
-.search-form__label {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 5px;
-  padding: 1px;
-}
-
-.search-form__label:hover {
-  text-decoration: underline;
-  cursor: pointer;
-}
-
-.search-form__label:has(:focus-visible) {
-  outline: 1px solid #fff;
-  outline-offset: 1px;
 }
 
 .search-form__pseudo-checkbox {
@@ -190,7 +180,7 @@ ol {
 }
 
 .search-form__label-text {
-  font-family: Fira Sans Condensed, sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
