--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,7 @@ ol {
   border: 1px solid #fff;
   border-radius: 0;
   color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 21.6px;
@@ -88,18 +89,21 @@ ol {
   flex-direction: column;
   justify-content: end;
   max-inline-size: 711px;
+  padding-block-start: 78px;
 }
 
 .result__video-container {
   position: relative;
-  margin-block-start: auto;
   margin-block-end: 16px;
-  inline-size: 100%;
-  max-block-size: 395px;
+  block-size: 100%;
+  min-inline-size: 711px;
 }
 
 .result__video {
+  max-block-size: 386px;
   inline-size: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .search-form {
@@ -113,6 +117,7 @@ ol {
 }
 
 .search-form__fieldset-title {
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
@@ -134,24 +139,29 @@ ol {
 
 .search-form__label:hover:has(input[type="checkbox"]) {
   cursor: pointer;
+  text-decoration: underline;
 }
 
+.search-form__label-text {
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 21.6px;
+}
 
 .search-form__textfield {
-  inline-size: 100%;
+  min-inline-size: 220px;
   background-color: transparent;
   border: 0;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
   border-radius: 0;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.6px;
   color: #fff;
-}
-
-.search-form__textfield:hover {
-  cursor: text;
+  appearance: none;
 }
 
 .search-form__textfield:focus {
@@ -159,7 +169,12 @@ ol {
 }
 
 .search-form__textfield:focus-visible {
-  outline: none;
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
+.search-form__textfield:hover {
+  cursor: text;
 }
 
 .search-form__textfield:active {
@@ -180,21 +195,22 @@ ol {
   outline-offset: 1px;
 }
 
-.search-form__label-text {
-  font-family: "Fira Sans Condensed", sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 21.6px;
-  text-align: left;
-}
-
 .search-form__checkbox:checked + .search-form__pseudo-checkbox {
   background-color: #fff;
 }
 
 .search-form__submit-button {
-  min-inline-size: 195px;
+  inline-size: 100%;
   align-self: end;
+}
+
+.search-form__submit-button:focus {
+  outline: 0 none;
+}
+
+.search-form__submit-button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
 }
 
 .content__details {
@@ -203,7 +219,7 @@ ol {
 
 .title {
   margin-block-end: 26px;
-  font-family: Oswald, sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 75px;
   font-weight: 700;
   line-height: 70.5px;
@@ -220,10 +236,11 @@ ol {
   position: relative;
   block-size: 300px;
   max-inline-size: 400px;
-  overflow-y: auto;
+  overflow: auto;
+  padding-block-end: 1px;
 }
 
-.content__list-item:not(:last-child) {
+.content__list-item {
   margin-block-end: 30px;
   padding: 2px;
 }
@@ -237,7 +254,7 @@ ol {
   background-color: #545050;
 }
 
-.content__list-item:has(.content__card-link:focus) {
+.content__list-item:has(.content__card-link:focus-visible) {
   outline: 1px solid #fff;
 }
 
@@ -257,16 +274,17 @@ ol {
 }
 
 .content__video-card-title {
-  font-family: Oswald, sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 30px;
   font-weight: 700;
   line-height: 30px;
+  text-transform: uppercase;
   text-align: left;
   margin-block-end: 6px;
 }
 
 .content__video-card-description {
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 16.2px;
